--- a/google.html
+++ b/google.html
@@ -19,57 +19,75 @@
             <li><img src="./assets/images/option.png" alt="사용자 옵션 이미지" class="img-option"></li>
             <li><img src="./assets/images/unnamed.png" alt="사용자를 간단히 나타내는 이미지" class="img-user"></li>
         </ul>
-    </nav>
-    <main>
         <section class="sec-logo">
+            <h1 class="blind">구글 홈페이지</h1>
             <img src="./assets/images/logo.gif" title="2021 연말연시" alt="구글로고" class="img-logo">
         </section>
+    </nav>
+    <main>
         <section class="sec-inp">
-            <input type="text" placeholder="Google 검색 또는 URL 입력" class="inp-search">
-        </section>
+            <fieldset>
+                <legend>검색</legend>
+                <input type="search" placeholder="Google 검색 또는 URL 입력" class="inp-search">
+            </fieldset>
+        </section> 
         <nav class="imed-go">
             <ul>
-                <li title="NAVER">
-                    <div>
-                        <img src="./assets/images/naver.png" alt="네이버 바로가기">
-                    </div>
-                    <span>NAVER</span>
+                <li>
+                    <a href="#" title="NAVER">
+                        <div>
+                            <img src="./assets/images/naver.png" alt="네이버 바로가기">
+                        </div>
+                        <span>NAVER</span>
+                    </a>
                 </li>
-                <li title="coopang">
-                    <div>
-                        <img src="./assets/images/coopang.png" alt="쿠팡 바로가기">
-                    </div>
-                    <span>쿠팡!</span>
+                <li>
+                    <a href="#" title="coopang"> 
+                        <div>
+                            <img src="./assets/images/coopang.png" alt="쿠팡 바로가기">
+                        </div>
+                        <span>쿠팡!</span>
+                    </a>
                 </li>
-                <li title="YES24">
-                    <div>
-                        <img src="./assets/images/yes24.png" alt="YES34 바로가기">
-                    </div>
-                    <span>YES24</span>
+                <li>
+                    <a href="#" title="YES24">
+                        <div>
+                            <img src="./assets/images/yes24.png" alt="YES34 바로가기">
+                        </div>
+                        <span>YES24</span>
+                    </a>
                 </li>
-                <li title="React App">
-                    <div>
-                        <img src="./assets/images/react.png" alt="리액트 바로가기">
-                    </div>
-                    <span>React App</span>
+                <li>
+                    <a href="" title="React App">
+                        <div>
+                            <img src="./assets/images/react.png" alt="리액트 바로가기">
+                        </div>
+                        <span>React App</span>
+                    </a>
                 </li>
-                <li title="YouTube">
-                    <div>
-                        <img src="./assets/images/youtube.png" alt="유튜브 바로가기">
-                    </div>
-                    <span>YouTube</span>
+                <li>
+                    <a href="#" title="YouTube">
+                        <div>
+                            <img src="./assets/images/youtube.png" alt="유튜브 바로가기">
+                        </div>
+                        <span>YouTube</span>
+                    </a>
                 </li>
-                <li title="Github">
-                    <div>
-                        <img src="./assets/images/github.png" alt="깃허브 바로가기">
-                    </div>
-                    <span>Github</span>
+                <li>
+                    <a href="#" title="Github">
+                        <div>
+                            <img src="./assets/images/github.png" alt="깃허브 바로가기">
+                        </div>
+                        <span>Github</span>
+                    </a>
                 </li>
-                <li title="localhost">
-                    <div>
-                        <img src="./assets/images/localhost.png" alt="로컬호스트 바로가기">
-                    </div>
-                    <span>localhost</span>
+                <li>
+                    <a href="#" title="localhost">
+                        <div>
+                            <img src="./assets/images/localhost.png" alt="로컬호스트 바로가기">
+                        </div>
+                        <span>localhost</span>
+                    </a>
                 </li>
                 <li>
                     <div>
