--- a/einsmedia/index.html
+++ b/einsmedia/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <script src="http://code.jquery.com/jquery-1.11.2.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
     <div class="dimm"></div>
